--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-        <div class="navbar solid">
+        <div class="navbar" id="navbar">
             <a href="">Home</a>
             <a href="">About</a>
             <a href="">Services</a>
